# crystal-cif-io

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/data_dict/: mod.rs  test.rs
src/data_dict/core_cif/: mod.rs
src/data_dict/core_cif/atom_site/: adp_type.rs  chemrust_impl.rs  fract.rs  label_symbol.rs  mod.rs  symmetry_multiplicity.rs
src/data_dict/core_cif/audit/: mod.rs
src/data_dict/core_cif/cell/: angle.rs  chemrust_impl.rs  mod.rs
src/data_dict/core_cif/space_group/: chemrust_impl.rs  crystal_system.rs  it_number.rs  mod.rs
src/data_dict/data_types/: mod.rs  num_value.rs
src/data_dict/symmetry_cif/space_group/: crystal_system.rs  it_number.rs  mod.rs
src/grammar/: chemrust_impl.rs  index.rs  mod.rs
src/grammar/character_sets/: any_print_char.rs  mod.rs  non_blank_char.rs  ordinary_char.rs  special_tokens.rs  text_lead_char.rs
src/grammar/numeric_values/: exponent.rs  float.rs  integer.rs  mod.rs  unsigned_integer.rs
src/grammar/reserved_words/: _loop.rs  data.rs  global.rs  mod.rs  save.rs  stop.rs
src/grammar/strings_textfields/: double_quoted_string.rs  mod.rs  single_quoted_string.rs  text_field.rs  unquoted_string.rs
src/grammar/structures/: data_items.rs  loop_struct.rs  mod.rs  save_frame.rs  tag_value_line.rs
src/grammar/structures/data_block/: heading.rs  members.rs  mod.rs
src/grammar/structures/loop_struct/: body.rs  header.rs
src/grammar/tags_values/: .tag 2.rs.icloud  mod.rs  tag.rs
src/grammar/tags_values/values/: mod.rs
src/grammar/tags_values/values/numeric_values/: float.rs  integer.rs  mod.rs
src/grammar/whitespace_comments/: comments.rs  mod.rs
src/serde/: mod.rs
