[package]
name = "crystal-cif-io"
version = "0.2.0"
edition = "2021"
author = "TonyWu20"

[dependencies]
castep-periodic-table = "0.5"
chemrust-core = {version = "0.3.5", optional = true}
chrono = "0.4"
crystallographic-group = {version = "0.2.0", optional = true}
winnow = "0.6"
serde = {version = "1.0", optional= true, features=["derive"]}

[features]
default = ["chemrust-core", "serde"]
chemrust-core = ["dep:chemrust-core", "dep:crystallographic-group"]
serde = ["dep:serde"]

[dev-dependencies]
castep-cell-io = {git = "https://github.com/TonyWu20/castep-cell-io.git", branch ="dev"}
