[package]
name = "crystal-cif-io"
version = "0.1.0"
edition = "2021"
author = "TonyWu20"
description = "A library to parse and write crystallography `cif` format."
keywords = ["chemistry", "crystallography"]
license = "MIT"
repository = "https://github.com/TonyWu20/crystal-cif-io"

[dependencies]
castep-periodic-table = "0.5"
chemrust-core = {version="0.4.0", optional = true}
nalgebra = {version="0.33", optional=true}
chrono = "0.4"
crystallographic-group = {version = "0.2.0", optional = true}
winnow = "0.6"
indexmap = {version="2.2", optional=true}

[features]
default = ["chemrust-core"]
chemrust-core = ["dep:chemrust-core", "dep:crystallographic-group", "dep:nalgebra"]

[dev-dependencies]
castep-cell-io = {git = "https://github.com/TonyWu20/castep-cell-io.git", branch ="dev"}
